# jigsaw

./: .gitignore  Cargo.toml  Trunk.toml  ci_build.sh  frog.jpg:Zone.Identifier  make_release.sh  multi.sh  nihon.jpg:Zone.Identifier  notes.md  run.sh  rust-toolchain.toml  server_config.toml
.cargo/: config.toml
admin/: Cargo.toml
client/: Cargo.toml  index.html
client/assets/shaders/: piece.wgsl
client/src/: better_quad.rs  board.rs  colors.rs  cursor.rs  disable_context_menu.rs  help.rs  loader.rs  main.rs  material.rs  network.rs  piece.rs  pieces.rs  states.rs  viewport.rs  worker.rs
crates/client/: Cargo.toml  index.html  style.css
crates/client/assets/shaders/: piece.wgsl
crates/client/src/: animation.rs  better_quad.rs  board.rs  cursor.rs  cursors.rs  help.rs  loader.rs  main.rs  material.rs  mouse.rs  network.rs  pieces.rs  players.rs  states.rs  ui.rs  util.rs  viewport.rs
crates/game/: Cargo.toml
crates/game/src/: events.rs  image.rs  lib.rs  piece.rs  player.rs  puzzle.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: clients.rs  main.rs  puzzle_loader.rs  server_game_event.rs
cutter/: .gitignore  Cargo.toml
cutter/src/: main.rs
game/: .gitignore  Cargo.toml
game/src/: events.rs  image.rs  lib.rs  main.rs  piece.rs  puzzle.rs  puzzle_params.rs
server/: Cargo.toml
server/src/: main.rs
