[package]
name = "client"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
game = { path = "../game" }

anyhow = "1.0.69"
image = "0.24.5"
reqwest = "0.11.15"
tokio = { version = "1", features = ["sync"] }
futures-lite = "1.12.0"
bevy_web_fullscreen = "0.2.1"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
features = [
  #"android_shared_stdcxx",
  "animation",
  #"bevy_animation",
  "bevy_asset",
  #"bevy_audio",
  "bevy_core_pipeline",
  #"bevy_gilrs",
  #"bevy_gltf",
  #"bevy_pbr",
  "bevy_render",
  #"bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",

  #"dynamic_linking",

  "filesystem_watcher",
  #"hdr",
  #"ktx2",
  #"png",
  #"tonemapping_luts",
  #"vorbis",
  "x11",
  #"zstd"
]
