[package]
name = "client"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
game = { path = "../game" }

anyhow = "1.0.69"
image = "0.24.5"
reqwest = "0.11.15"
tokio = { version = "1", features = ["sync"] }
futures-lite = "1.12.0"
gloo-events = "0.1.2"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlCollection",
  "Window",
]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
]
