[package]
name = "game"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
image = "0.24.5"
serde = { version = "1.0", features = ["derive", "rc"] }
resvg = "0.29.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
bevy = { git = "https://github.com/bevyengine/bevy", features = ["bevy_render", "serialize"], default-features = false }
rand = "0.8.5"
