[package]
name = "client"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
game = { path = "../game" }

anyhow = "1.0.69"
automod = "1.0.8"
image = "0.24.5"
rand = "0.8.5"
reqwest = "0.11.15"
tokio = { version = "1", features = ["sync"] }
futures-lite = "1.12.0"
gloo-events = "0.1.2"
wasm-bindgen = "0.2.84"
bevy = { git = "https://github.com/bevyengine/bevy", features = ["serialize"] }
bevy_tweening = { git = "https://github.com/harrisonmg/bevy_tweening" }
ws_stream_wasm = "0.7.4"
futures-util = "0.3.28"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlCollection",
  "Window",
]

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["serialize", "dynamic_linking"] }
