[package]
name = "client"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
game = { path = "../game" }

anyhow = "1.0.69"
automod = "1.0.12"
image = "0.24.5"
rand = "0.8.5"
reqwest = "0.11.15"
tokio = { version = "1", features = ["sync"] }
futures-lite = "1.12.0"
gloo-events = "0.1.2"
wasm-bindgen = "0.2.84"
ws_stream_wasm = "0.7.4"
futures-util = "0.3.28"
itertools = "0.10.5"
gloo-file = "0.2.3"
regex = "1.9.5"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlElement",
  "Location",
  "Navigator",
  "Window",
]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "aa80e2d"
features = ["bevy_render", "serialize"]

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "aa80e2d"
features = ["bevy_render", "serialize", "dynamic_linking"]
