[package]
name = "game"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
image = "0.24.5"
serde = { version = "1.0", features = ["derive", "rc"] }
resvg = "0.29.0"
uuid = "1.3.2"
rand = "0.8.5"
serde_json = "1.0.96"
serde_json_any_key = "2.0.0"
log = "0.4.17"
bytes = { version = "1.4.0", features = ["serde"] }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "469a19c"
features = ["bevy_render", "serialize"]
default-features = false

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "469a19c"
features = ["bevy_render", "serialize", "dynamic_linking"]
default-features = false
