[package]
name = "server"
version = "0.1.0"
authors = ["harrisonmg"]
edition = "2021"

[dependencies]
game = { path = "../game" }

image = "0.24.5"
reqwest = "0.11.15"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.4", features = ["tls"] }
futures-util = "0.3.28"
futures = "0.3.28"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
env_logger = "0.10.0"
log = "0.4.17"
anyhow = "1.0.71"
bytes = "1.4.0"
automod = "1.0.12"
toml = "0.7.6"
serde_with = "3.3.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.2", features = ["derive"] }
